2013-04-09  Peter Bloomfield

	* libbalsa/imap/imap_tst.c (main): g_type_init is deprecated.
	* src/main.c (threads_init): ditto.

2013-04-08  Peter Bloomfield

	* configure.ac: add webkit2 as an option for --with-html-widget.

2013-04-08  Peter Bloomfield

	* libbalsa/html.c (lbh_get_web_view): can-select and select-all
	sometimes pass the web-view and sometimes the container.
	* src/balsa-mime-widget-text.c (bm_select_all_cb),
	(bmwt_populate_popup_menu): add "select all" to the
	webKitWebView context menu, the same as for a GtkTextView

2013-04-08  Peter Bloomfield

	* libbalsa/html.c (lbh_context_menu_cb): pass the GdkEvent when
	emitting "popup-menu";
	* libbalsa/html.h: define key for GdkEvent.
	* src/balsa-mime-widget-text.c (balsa_gtk_html_popup): use it to
	pass the event time when popping up the menu.

2013-04-08  Peter Bloomfield

	* libbalsa/send.c (libbalsa_set_message_id): constify two
	strings.

2013-04-07  Peter Bloomfield

	* src/balsa-mime-widget-message.c (bmwm_set_headers_d_idle_cb),
	(balsa_mime_widget_message_set_headers_d): queue iheader widget
	resize in an idle handler, to get the size right the first time.
	* src/main-window.c: initially hide the preview.

2013-04-06  Peter Bloomfield

	* configure.ac: simplify WebKit2 configuration.

2013-04-06  Peter Bloomfield

	* configure.ac: require GtkSourceView 3.2
	* src/sendmsg-window.c: gtksource.h is the main header; fixes
	bgo #697454 (Dominique Leuenberger).

2013-04-06  Peter Bloomfield

	* libbalsa/html.c (libbalsa_html_popup_menu_widget),
	(libbalsa_html_print): actually print the HTML part.

2013-04-05  Peter Bloomfield

	* libbalsa/html.c (lbh_context_menu_cb), (libbalsa_html_new):
	catch WebKit's "context-menu" signal, and emit "popup-menu" on
	the parent widget instead.
	* src/balsa-mime-widget-text.c (balsa_gtk_html_popup): do not
	unref the popup menu.

2013-04-04  Peter Bloomfield

	* libbalsa/html.c (lbh_info_bar_response_cb): no need to reload;